--- a/leaves.css
+++ b/leaves.css
@@ -5,19 +5,21 @@ object {
 }
 
 #header {
-    background: black;
-    color: white;
+    text-align: center;
+    background:inherit;
     text-decoration: none;
     padding: 10px;
     width: 100%;
-    position: fixed;
-    top: 0;
+    display: block;
 }
 
+#title{
+    width: 80%;
+}
 body {
-    text-align: center;
-    padding-top: 200px;
     margin: 0;
+    background-image: url(graphics/bg.png);
+    background-repeat: repeat;
 }
 
 a {
@@ -35,7 +37,6 @@ td {
 }
 
 .item {
-    border: 1px black solid;
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
