--- a/pages/leaves.css
+++ b/pages/leaves.css
@@ -21,7 +21,7 @@ nav {
     position: fixed;
     left: 0;
     top: 0;
-    width: 150px;
+    width: 200px;
     height: 100%;
     display: block;
     background: black;
@@ -65,7 +65,6 @@ body {
 body {
     position: relative;
     left: 200px;
-    width: 60%
 }
 
 a {
@@ -87,24 +86,68 @@ td {
     display: flex;
     float: left;
     height: 300px;
-    width: 450px;
+    width: 50%;
 }
 
 .picture {
     clip: rect(0px, 50px, 50px, 0px);
 }
 
-.specs,
-.detail {
+#content{
+    display: table;
+}
+.keys {
     padding-left: 5px;
 }
+#menuButton{
+    display: none;
+}
 
+@media screen and (max-width: 1000px){
+    nav{
+        display: none; 
+    }
+    body{
+        left:0;
+        width: 100%;
+    }
+    #menuButton{
+        text-align: center;
+        display: block;
+        padding: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100px;
+        border: 1px solid black; 
+        border-radius: 10px;
+    }
+    #menuButton:hover{
+        background: darkgreen;
+        cursor: pointer;
+    }
+    
+}
 @media screen and (max-width: 500px) {
     .item {
+        margin-left:auto;
+        margin-right: auto;
         width: 100%;
     }
     img,
     object {
         width: 150px;
     }
+    #navPane{
+        width:100%;
+    }
+    ni{
+        padding: 20px;
+    }
+    #navImg{
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100px;
+    }
+    /*make UofT icon small*/
 }
