--- a/pages/leaves.css
+++ b/pages/leaves.css
@@ -32,7 +32,7 @@ nav {
     margin-top:10px;
     margin-bottom:10px;
     height:72%;
-    overflow: auto;
+    overflow-y: scroll;
 }
 select{
     width:100%;
